// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphqlQueries mocks ABOUT_QUERY successfully 1`] = `
{
  "data": {
    "About": {
      "coloredSubhead": null,
      "content": null,
      "image": {
        "alt": "Hello World",
        "height": -39.26243533081424,
        "id": "Hello World",
        "url": "Hello World",
        "width": -13.925099047159904,
      },
      "pets": {
        "athena": {
          "alt": "Hello World",
          "height": -39.26243533081424,
          "id": "Hello World",
          "url": "Hello World",
          "width": -13.925099047159904,
        },
        "harvey": {
          "alt": "Hello World",
          "height": -39.26243533081424,
          "id": "Hello World",
          "url": "Hello World",
          "width": -13.925099047159904,
        },
        "warren": {
          "alt": "Hello World",
          "height": -39.26243533081424,
          "id": "Hello World",
          "url": "Hello World",
          "width": -13.925099047159904,
        },
      },
      "title": "Hello World",
    },
  },
  "errors": [
    [GraphQLError: No mock defined for type "JSON"],
    [GraphQLError: No mock defined for type "JSON"],
  ],
}
`;

exports[`graphqlQueries mocks NAV_QUERY successfully 1`] = `
{
  "data": {
    "Nav": {
      "footerCopyrightText": "Hello World",
      "menuItems": [
        {
          "customLabel": "Hello World",
          "overridePageName": false,
          "page": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
        },
        {
          "customLabel": "Hello World",
          "overridePageName": false,
          "page": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks PAGE_CONTENT_QUERY successfully 1`] = `
{
  "errors": [
    [GraphQLError: Variable "$slug" of required type "String!" was not provided.],
  ],
}
`;

exports[`graphqlQueries mocks PAGES_QUERY successfully 1`] = `
{
  "data": {
    "Pages": {
      "docs": [
        {
          "id": "Hello World",
          "sections": [
            {
              "__typename": "HeroBlock",
              "hero": {
                "coloredSubhead": null,
                "cta": {
                  "externalLink": "Hello World",
                  "id": "Hello World",
                  "internalLink": {
                    "id": "Hello World",
                    "slug": "Hello World",
                  },
                  "label": "Hello World",
                  "linkType": "internal",
                },
                "heading": "Hello World",
                "headingTag": "Hello World",
                "icon": {
                  "alt": "Hello World",
                  "height": 64,
                  "id": "Hello World",
                  "url": "Hello World",
                  "width": 64,
                },
                "id": "Hello World",
              },
              "id": "Hello World",
            },
            {
              "__typename": "HeroBlock",
              "hero": {
                "coloredSubhead": null,
                "cta": {
                  "externalLink": "Hello World",
                  "id": "Hello World",
                  "internalLink": {
                    "id": "Hello World",
                    "slug": "Hello World",
                  },
                  "label": "Hello World",
                  "linkType": "internal",
                },
                "heading": "Hello World",
                "headingTag": "Hello World",
                "icon": {
                  "alt": "Hello World",
                  "height": 64,
                  "id": "Hello World",
                  "url": "Hello World",
                  "width": 64,
                },
                "id": "Hello World",
              },
              "id": "Hello World",
            },
          ],
          "slug": "Hello World",
          "title": "Hello World",
        },
        {
          "id": "Hello World",
          "sections": [
            {
              "__typename": "HeroBlock",
              "hero": {
                "coloredSubhead": null,
                "cta": {
                  "externalLink": "Hello World",
                  "id": "Hello World",
                  "internalLink": {
                    "id": "Hello World",
                    "slug": "Hello World",
                  },
                  "label": "Hello World",
                  "linkType": "internal",
                },
                "heading": "Hello World",
                "headingTag": "Hello World",
                "icon": {
                  "alt": "Hello World",
                  "height": 64,
                  "id": "Hello World",
                  "url": "Hello World",
                  "width": 64,
                },
                "id": "Hello World",
              },
              "id": "Hello World",
            },
            {
              "__typename": "HeroBlock",
              "hero": {
                "coloredSubhead": null,
                "cta": {
                  "externalLink": "Hello World",
                  "id": "Hello World",
                  "internalLink": {
                    "id": "Hello World",
                    "slug": "Hello World",
                  },
                  "label": "Hello World",
                  "linkType": "internal",
                },
                "heading": "Hello World",
                "headingTag": "Hello World",
                "icon": {
                  "alt": "Hello World",
                  "height": 64,
                  "id": "Hello World",
                  "url": "Hello World",
                  "width": 64,
                },
                "id": "Hello World",
              },
              "id": "Hello World",
            },
          ],
          "slug": "Hello World",
          "title": "Hello World",
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks SLUG_QUERY successfully 1`] = `
{
  "data": {
    "Pages": {
      "docs": [
        {
          "slug": "Hello World",
        },
        {
          "slug": "Hello World",
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks TESTIMONIALS_QUERY successfully 1`] = `
{
  "data": {
    "TestimonialListing": {
      "icon": {
        "alt": "Hello World",
        "height": 64,
        "id": "Hello World",
        "url": "Hello World",
        "width": 64,
      },
      "testimonials": null,
      "title": "Hello World",
    },
  },
  "errors": [
    [GraphQLError: No mock defined for type "JSON"],
  ],
}
`;

exports[`graphqlQueries mocks TOOLBOX_QUERY successfully 1`] = `
{
  "data": {
    "ToolboxListing": {
      "description": "Hello World",
      "icon": {
        "alt": "Hello World",
        "height": 64,
        "id": "Hello World",
        "url": "Hello World",
        "width": 64,
      },
      "title": "Hello World",
      "tools": [
        {
          "icon": {
            "alt": "Hello World",
            "height": 64,
            "id": "Hello World",
            "url": "Hello World",
            "width": 64,
          },
          "id": "Hello World",
          "title": "Hello World",
        },
        {
          "icon": {
            "alt": "Hello World",
            "height": 64,
            "id": "Hello World",
            "url": "Hello World",
            "width": 64,
          },
          "id": "Hello World",
          "title": "Hello World",
        },
      ],
    },
  },
}
`;
